--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ImVictorM.github.io/Tryunfo",
   "name": "tryunfo",
   "version": "1.0.1",
   "private": true,
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -45,6 +48,7 @@
   "devDependencies": {
     "@testing-library/dom": "^8.17.1",
     "eslint-config-trybe-frontend": "1.3.1",
+    "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
     "stylelint": "^14.10.0",
     "stylelint-config-standard": "^27.0.0",
